--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.2",
+    "@tanstack/react-query": "^5.90.7",
     "antd": "^5.28.0",
     "axios": "^1.13.1",
     "crypto-js": "^4.2.0",
